QXGEdit - Qt XG Editor
----------------------

ChangeLog


GIT HEAD

- Make sure compiler flags comply to c++11 as standard.


0.5.5  2019-07-12  A Summer'19 Release.

- Updated for the newer Qt5 development tools (>= 5.13).

- Configure updated to check for qtchooser availability.

- Corrected display of note names on the lowest octave,
  as from "C -1" (0) through  "B -1" (11).

- Minor update to Debian packaging control file.


0.5.4  2019-04-11  A Spring-Break'19 Release.

- Re-defined all main application UNIX signal handling.


0.5.3  2019-03-11  Pre-LAC2019 Release Frenzy.

- HiDPI display screen support (Qt >= 5.6).

- Old deprecated Qt4 build support is no more.

- AppStream metadata updated to be the most compliant with
  latest freedesktop.org specification and recommendation.


0.5.2  2018-07-22  A Summer'18 Release.

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP).

- Corrected default handling of MULTIPART > Main > Control >
  Volume and also MULTIPART > Control > Pitch Bend > LFO ...

- Fixed for some g++ >= 8.1.1 warnings and quietness.


0.5.1  2018-05-21  Pre-LAC2018 release frenzy.

- Corrected wrong handling of the MULTIPART Detune parameter.

- Trying to get CC14 MSB+LSB (course+fine) running status on,
  no matter whether each pairing event are under 200ms apart.

- A little hardening on the configure (autoconf) macro side.


0.5.0  2017-12-16  End of Autum'17 release.

- Desktop entry specification file is now finally independent
  from build/configure template chains.

- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).

- Changing the View/Options.../General/Widget style theme
  now takes effect immediately unless it's to "(default)".


0.4.3  2017-04-27  Pre-LAC2017 release frenzy.

- Added French man page (by Olivier Humbert, thanks).

- Added one decimal digit to the randomize percentage input
  spin-boxes on the General Options dialog.
